tests/fixtures/errors/not_a_function.lazy
x = 42
result = x 10
result
